chore(tooling): clients scripts and Docker image (#43)